add negative test for CategoryController