@@ -3,18 +3,16 @@ package ru.tbank.controller;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import ru.tbank.annotation.LogControllerExecution;
 import ru.tbank.dto.CategoryDTO;
+import ru.tbank.mapper.CategoryMapper;
 import ru.tbank.model.Category;
 import ru.tbank.service.CategoryService;
-import ru.tbank.mapper.CategoryMapper;
+import ru.tbank.exception.CategoryNotFoundException;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/v1/places/categories")
-@LogControllerExecution
+@RequestMapping("/api/v1/categories")
 public class CategoryController {
     private final CategoryService categoryService;
 
@@ -26,13 +24,17 @@ public class CategoryController {
     public Collection<CategoryDTO> getAllCategories() {
         return categoryService.getAllCategories().stream()
                 .map(CategoryMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<CategoryDTO> getCategoryById(@PathVariable int id) {
-        Category category = categoryService.getCategoryById(id);
-        return ResponseEntity.ok(CategoryMapper.toDTO(category));
+        try {
+            Category category = categoryService.getCategoryById(id);
+            return ResponseEntity.ok(CategoryMapper.toDTO(category));
+        } catch (CategoryNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+        }
     }
 
     @PostMapping
@@ -43,13 +45,21 @@ public class CategoryController {
 
     @PutMapping("/{id}")
     public ResponseEntity<CategoryDTO> updateCategory(@PathVariable int id, @RequestBody CategoryDTO categoryDTO) {
-        Category updatedCategory = categoryService.updateCategory(id, CategoryMapper.toEntity(categoryDTO)); // Используем маппер для преобразования
-        return ResponseEntity.ok(CategoryMapper.toDTO(updatedCategory)); // Возвращаем обновленную категорию как DTO
+        try {
+            Category updatedCategory = categoryService.updateCategory(id, CategoryMapper.toEntity(categoryDTO));
+            return ResponseEntity.ok(CategoryMapper.toDTO(updatedCategory));
+        } catch (CategoryNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+        }
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteCategory(@PathVariable int id) {
-        categoryService.deleteCategory(id);
-        return ResponseEntity.noContent().build();
+        try {
+            categoryService.deleteCategory(id);
+            return ResponseEntity.noContent().build();
+        } catch (CategoryNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+        }
     }
 }
